# emulate-era5-land

./: README.md  learn-torch.yml  pyproject.toml  setup.py
data/: list_feats_era5.json
data/models/acclstm-era5-swm-0/: acclstm-era5-swm-0_config.json  acclstm-era5-swm-0_metrics_simple.json
data/models/acclstm-era5-swm-1/: acclstm-era5-swm-1_config.json  acclstm-era5-swm-1_metrics_simple.json
data/models/acclstm-era5-swm-10/: acclstm-era5-swm-10_config.json  acclstm-era5-swm-10_metrics_simple.json
data/models/acclstm-era5-swm-11/: acclstm-era5-swm-11_config.json  acclstm-era5-swm-11_metrics_simple.json
data/models/acclstm-era5-swm-12/: acclstm-era5-swm-12_config.json  acclstm-era5-swm-12_metrics_simple.json
data/permutations/: permutation_210.pkl
emulate_era5_land/: ModelDir.py  eval_gridstats.py  evaluators-new.py  evaluators.py  extract_era5.py  extract_gridstats.py  extract_nldas2.py  generators.py  helpers.py  models.py  plotting.py  training.py
era5_testbed/: helpers.py
info/: notes_evaluation.md  notes_model-types.md  notes_organization.md  notes_training.md
scripts/: config_eval_plot.py  eval_gridstats.py  eval_models.py  extract_era5.py  extract_static.py  get_permutation.py  perm_test.py  plot_eval.py  plot_masks.py  plot_static.py  plot_training.py  static_probability.py  test_generators.py  test_series_alignment.py  tmp_plot_eval_static.py  train_single.py
slurm/: slurm_eval_gpu.queue  slurm_evaluate.queue  slurm_extract.queue  slurm_gridstats.queue  slurm_make_env.queue  slurm_plot.queue  slurm_train_cpu.queue  slurm_train_gpu.queue
(+116 files in other folders)
